# ray

./: BUILD.bazel
.buildkite/: data.rayci.yml  ml.rayci.yml
bazel/: BUILD.rocksdb  ray_deps_setup.bzl
ci/docker/: ml.build.Dockerfile
ci/pipeline/: determine_tests_to_run.py
ci/ray_ci/: tests.env.Dockerfile
doc/: requirements-doc.txt
python/: requirements_compiled.txt
python/ray/_private/: node.py
python/requirements/: test-requirements.txt
rep-64-poc/: EVIDENCE.md  PR_BODY.md  README.md  RISKS.md
rep-64-poc/harness/concurrency/: BUILD.bazel  concurrency_test.cc
rep-64-poc/harness/k8s/: DESIGN.md  IMPLEMENTATION.md  README.md  lib.sh
rep-64-poc/harness/k8s/env/: k3d.env  kind.env
rep-64-poc/harness/k8s/manifests/: raycluster.yaml.tmpl
rep-64-poc/harness/microbench/: BUILD.bazel
rep-64-poc/harness/recovery/: BUILD.bazel
rep-64-poc/harness/store_client_parity/: BUILD.bazel  rocksdb_parity_test.cc
rep-64-poc/reports/: phase-1-foundations.md  phase-2-bazel.md  phase-3-skeleton.md
rllib_contrib/alpha_star/: pyproject.toml
rllib_contrib/alpha_zero/: pyproject.toml
rllib_contrib/ars/: pyproject.toml
rllib_contrib/crr/: pyproject.toml
rllib_contrib/ddppo/: pyproject.toml
rllib_contrib/dt/: pyproject.toml
rllib_contrib/es/: pyproject.toml
rllib_contrib/maddpg/: pyproject.toml
rllib_contrib/pg/: pyproject.toml
rllib_contrib/qmix/: pyproject.toml
rllib_contrib/simple_q/: pyproject.toml
rllib_contrib/slate_q/: pyproject.toml
src/ray/common/: ray_config_def.h
src/ray/gcs/: gcs_server.cc
src/ray/gcs/gcs_server/: gcs_server.h  (+1 more)
(+14 files in other folders)
